--- a/style.css
+++ b/style.css
@@ -419,3 +419,160 @@ a{
   margin: 0px 5% 50px;
   }
 }
+
+/* Sign */
+.sign{
+  background-image: url(img/banner/b14.png);
+  background-size: cover;
+  background-position: center;
+  padding: 50px 10%;
+  background-color: #021E43;
+  color: white;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.sign h2{
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+.sign p span{
+  color: orange;
+}
+
+.sign-text{
+  width: 50%;
+}
+
+.sign-form{
+  display: flex;
+  align-items: center;
+  width: 50%;
+}
+
+.sign-form input{
+  padding: 20px 25px;
+  border-radius: 10px 0 0 10px;
+  border: 0;
+  width: 100%;
+}
+
+.sign-form input::placeholder{
+  font-size: 16px;
+}
+
+.sign-form input:focus{
+  outline: none;
+}
+
+.sign-form a{
+  padding: 20px 25px;
+  background-color: #088178;
+  color: white;
+  border-radius: 0 10px 10px 0;
+  font-weight: 700;
+  flex-shrink: 0;
+}
+
+@media (max-width:850px){
+  .sign{
+    padding: 50px 5%;
+    align-items: start;
+    flex-direction: column;
+  }
+
+  .sign-text{
+    width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .sign-form{
+    width: 100%;
+  }
+}
+
+/* Footer */
+.footer{
+  margin: 50px 10%;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.footer-logo img{
+  margin-bottom: 20px;
+}
+
+.footer-logo p{
+  margin-bottom: 10px;
+}
+
+.footer-logo span{
+  font-weight: 600;
+}
+
+.footer-logo .follow{
+  margin-top: 30px;
+}
+
+.social{
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 20px;
+}
+
+.footer h3{
+  margin-bottom: 20px;
+  font-size: 20px;
+  color: black;
+}
+
+.footer-about a{
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 600;
+  color: gray;
+}
+
+.footer-account a{
+  display: block;
+  margin-bottom: 10px;
+  font-weight: 500;
+  color: gray;
+}
+
+.install{
+  color: gray;
+  font-weight: 500;
+}
+
+.install p{
+  margin: 20px 0;
+}
+
+.install .app-logo img{
+  border: 2px solid lime;
+  border-radius: 10px;
+}
+
+.footer-bottom{
+  margin: 50px 5%;
+  text-align: center;
+  font-weight: 600;
+}
+
+.footer-bottom span{
+  color: #08811e;
+}
+
+@media (max-width: 900px){
+  .footer{
+    flex-direction: column;
+    align-items: start;
+    margin: 30px 5%;
+  }
+}
